Bug 455006 - Recorder resize function not working
Summary: Recorder resize function not working
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers/Recorder (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2022-06-08 02:10 UTC by Rexel
Modified: 2024-06-05 19:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rexel 2022-06-08 02:10:31 UTC
STEPS TO REPRODUCE
1. Paint normally in a new document
2. Change the canvas size (not image size) in some way
3. Paint again
4. Export the recording

Result: The recorder will use the canvas size (or aspect ratio) at the time of creation, not the latest one.

5. Input the correct dimensions in the field inside the recorder (resize checkbox toggled and constrain proportions unlocked)
6. Export the recording

Result: No changes visible to the exported video.


Krita

 Version: 5.0.7 (git 18951b1)
 Installation type: installer / portable package
 Languages: en_US, en
 Hidpi: true

Qt

  Version (compiled): 5.12.12
  Version (loaded): 5.12.12

OS Information

  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.19044
  Pretty Productname: Windows 10 (10.0)
  Product Type: windows
  Product Version: 10
Comment 1 wolthera 2023-01-26 13:57:30 UTC
Hi, thank you for your report.

I can confirm with the Krita Version: 5.2.0-prealpha (git 5c98a72) Appimage with Qt 5.15.7
Comment 2 Emmet O'Neill 2024-05-01 23:42:13 UTC
Git commit 40524a339fc519cec62ed6e1fab663e923111635 by Emmet O'Neill, on behalf of Ralek Kolemios.
Committed on 01/05/2024 at 22:07.
Pushed by emmetoneill into branch 'master'.

Reworked default FFmpeg profiles
Related: bug 450790, bug 429326, bug 485515, bug 485514

M  +2    -0    plugins/dockers/recorder/recorder_export.cpp
M  +166  -147  plugins/dockers/recorder/recorder_export_config.cpp
M  +1    -0    plugins/dockers/recorder/recorder_profile_settings.ui

https://invent.kde.org/graphics/krita/-/commit/40524a339fc519cec62ed6e1fab663e923111635
Comment 3 Freya Lupen 2024-06-05 19:21:27 UTC
Git commit 47961a1a9c3322bfae8250cb9d3f8114af07cc7d by Freya Lupen, on behalf of Ralek Kolemios.
Committed on 05/06/2024 at 19:10.
Pushed by freyalupen into branch 'krita/5.2'.

Reworked default FFmpeg profiles
Related: bug 450790, bug 429326, bug 485515, bug 485514

 Conflicts:
	plugins/dockers/recorder/recorder_export.cpp
	plugins/dockers/recorder/recorder_export_config.cpp

(cherry-picked from commit 40524a33)

M  +2    -0    plugins/dockers/recorder/recorder_export.cpp
M  +166  -147  plugins/dockers/recorder/recorder_export_config.cpp
M  +1    -0    plugins/dockers/recorder/recorder_profile_settings.ui

https://invent.kde.org/graphics/krita/-/commit/47961a1a9c3322bfae8250cb9d3f8114af07cc7d