Reworked default FFmpeg profiles

BUG:455006
BUG:450790
BUG:429326
BUG:485515
BUG:485514

 Conflicts:
	plugins/dockers/recorder/recorder_export.cpp
	plugins/dockers/recorder/recorder_export_config.cpp

(cherry-picked from commit 40524a33)